--- a/pom.xml
+++ b/pom.xml
@@ -70,7 +70,7 @@
                         <id>default-cli</id>
                         <configuration>
                             <mainClass>
-                                org.example.taskmanagementsystem/org.example.taskmanagementsystem.HelloApplication
+                                org.example.taskmanagementsystem/org.example.taskmanagementsystem.Main
                             </mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
